Scrollbars in container to prevent panel floating down Fix initial zoom in map from step 2

--- a/AdaptationTools-portlet/docroot/css/main.css
+++ b/AdaptationTools-portlet/docroot/css/main.css
@@ -1,3 +1,8 @@
+#adaptationtool_container {
+    width: 1280px;
+    overflow-x: scroll;
+}
+
 #tree ul {
 	list-style:none;
 	list-style-type:none;
